--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,10 +3,11 @@
 </mat-toolbar>
 
 <div class="main-container">
-  <button mat-flat-button>Basic</button>
+  <!-- <button mat-flat-button>Basic</button>
   <button mat-flat-button color="primary">Primary</button>
   <button mat-flat-button color="accent">Accent</button>
   <button mat-flat-button color="warn">Warn</button>
   <button mat-flat-button disabled>Disabled</button>
-  <a mat-flat-button href="https://www.google.com/" target="_blank">Link</a>
+  <a mat-flat-button href="https://www.google.com/" target="_blank">Link</a> -->
+  <mat-progress-bar mode="query"></mat-progress-bar>
 </div>
