--- a/src/app/components/mapa/mapa.component.html
+++ b/src/app/components/mapa/mapa.component.html
@@ -1,10 +1,16 @@
 <mat-card>
   <mat-card-title>Mapa</mat-card-title>
   <mat-card-content>
-    <agm-map [latitude]="lat" [longitude]="lng" [zoom]="17">
-      <agm-marker [latitude]="lat" [longitude]="lng">
+    <agm-map (mapClick)="agregarMarcador($event)"
+             [latitude]="lat"
+             [longitude]="lng"
+             [zoom]="17">
+      <agm-marker *ngFor="let marcador of marcadores"
+                  [latitude]="marcador.lat"
+                  [longitude]="marcador.lng">
         <agm-info-window>
-          <p>Zombie ipsum reversus ab viral inferno, nam rick grimes malum</p>
+          <strong>{{ marcador.titulo }}</strong>
+          <p>{{ marcador.desc }}</p>
           <div>
             <button mat-raised-button color="primary">Editar</button>
             <button mat-raised-button color="warn">Borrar</button>
