--- a/src/app/components/mapa/mapa.component.html
+++ b/src/app/components/mapa/mapa.component.html
@@ -5,7 +5,7 @@
              [latitude]="lat"
              [longitude]="lng"
              [zoom]="17">
-      <agm-marker *ngFor="let marcador of marcadores"
+      <agm-marker *ngFor="let marcador of marcadores; let i = index"
                   [latitude]="marcador.lat"
                   [longitude]="marcador.lng">
         <agm-info-window>
@@ -13,7 +13,8 @@
           <p>{{ marcador.desc }}</p>
           <div>
             <button mat-raised-button color="primary">Editar</button>
-            <button mat-raised-button color="warn">Borrar</button>
+            <button mat-raised-button color="warn"
+                    (click)="borrarMarcador(i)">Borrar</button>
           </div>
         </agm-info-window>
       </agm-marker>
