--- a/src/app/components/mapa/mapa.component.html
+++ b/src/app/components/mapa/mapa.component.html
@@ -12,7 +12,8 @@
           <strong>{{ marcador.titulo }}</strong>
           <p>{{ marcador.desc }}</p>
           <div>
-            <button mat-raised-button color="primary">Editar</button>
+            <button mat-raised-button color="primary"
+                    (click)="editarMarcador(marcador)">Editar</button>
             <button mat-raised-button color="warn"
                     (click)="borrarMarcador(i)">Borrar</button>
           </div>
